--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,8 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "mysite/wsgi.py"
+            "src": "/static/(.*)",
+            "dest": "/staticfiles/$1"
         },
         {
             "src": "/(.*)",
