--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,17 @@
         {
             "src": "mysite/wsgi.py",
             "use": "@vercel/python"
+        },
+        {
+            "src": "staticfiles/**/*",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/staticfiles/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "mysite/wsgi.py"
