--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 Django==4.2.14
 gunicorn==22.0.0
 packaging==24.1
+python-decouple==3.8
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.1
