--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.8.1
+dj-database-url==2.2.0
 Django==4.2.14
+django-environ==0.11.2
 gunicorn==22.0.0
 packaging==24.1
+pillow==10.4.0
+psycopg2-binary==2.9.9
 python-decouple==3.8
 sqlparse==0.5.1
 typing_extensions==4.12.2
